# genai-lab

./: .env.example  .gitignore  404.html  INSTALL.md  README.md  README_DOCS.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/workflows/: docs.yml
DDPM/: index.html
DDPM/01_ddpm_foundations/: index.html
DDPM/02_ddpm_training/: index.html
DDPM/02a_diffusion_arch_gene_expression/: index.html
DDPM/02b_diffusion_arch_qa/: index.html
DDPM/03_ddpm_sampling/: index.html
DDPM/04_classifier_free_guidance/: index.html
DiT/: index.html
DiT/00_dit_overview/: index.html
EBM/: index.html
INDUSTRY_LANDSCAPE/: index.html
JEPA/: index.html
PROJECT_OVERVIEW/: index.html
ROADMAP/: index.html
SDE/: index.html
SETUP/: index.html
VAE/: index.html
applications/: index.html
data/: .gitignore  README.md
datasets/: index.html
diffusion/: index.html
docs/: INDUSTRY_LANDSCAPE.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  SETUP.md  index.md
examples/: 01_bulk_cvae.ipynb  README.md
flow_matching/: index.html
foundation_models/: index.html
incubation/: index.html
javascripts/: mathjax.js
latent_diffusion/: index.html
notebooks/: README.md  index.html
ops/: .gitignore  README.md  __init__.py  gpu_runner.py  provision_cluster.py
output/: .gitignore  README.md
products/: index.html
runpods.example/: README.md  environment-runpods-minimal.yml
runs/: .gitignore  README.md
score_matching/: index.html
search/: search_index.json
tests/: __init__.py  test_data.py  test_model.py
(+405 files in other folders)
